--- a/package.json
+++ b/package.json
@@ -70,17 +70,27 @@
         "redux-devtools-dock-monitor": "^1.1.1",
         "redux-devtools-log-monitor": "^1.2.0"
     },
+    "peerDependencies": {
+        "lodash": ">= 4.15.0",
+        "material-design-lite": ">= 1.2.1",
+        "material-design-icons-iconfont": ">= 3.0.3",
+        "react": ">= 15.3.0 < 16.0.0",
+        "react-dom": ">= 15.3.0 < 16.0.0",
+        "react-redux": ">= 4.4.5",
+        "redux": ">= 3.5.2",
+        "redux-thunk": ">= 2.1.0"
+    },
     "devDependencies": {
+        "babel-preset-sagess": "^1.0.4",
+        "better-npm-run": "0.0.5",
         "babel-cli": "^6.4.0",
         "babel-core": "^6.1.2",
         "babel-eslint": "^4.1.4",
-        "babel-preset-sagess": "^1.0.2",
         "babel-runtime": "^6.0.14",
-        "better-npm-run": "0.0.5",
         "chai": "^3.3.0",
         "chai-subset": "^1.1.0",
         "eslint": "1.5.1",
-        "eslint-config-sagess": "^1.0.2",
+        "eslint-config-sagess": "^1.0.3",
         "eslint-plugin-filenames": "0.1.1",
         "eslint-plugin-react": "3.5.0",
         "express": "^4.13.3",
@@ -93,12 +103,13 @@
         "mocha": "^2.3.0",
         "moment": "^2.14.1",
         "nock": "^2.17.0",
-        "react": "^16.3.0",
-        "react-dom": "^16.3.0",
+        "react": "^15.4.2",
+        "react-dom": "^15.4.2",
         "react-redux": "^5.0.1",
+        "react-addons-test-utils": "^15.4.2",
         "redux": "^3.6.0",
-        "redux-logger": "^2.7.4",
         "redux-thunk": "^2.1.0",
+        "redux-logger": "^2.7.4",
         "sinon": "^1.17.1",
         "sinon-chai": "^2.8.0"
     }
