--- a/package.json
+++ b/package.json
@@ -5,18 +5,25 @@
     "main": "index.js",
     "scripts": {
         "babelify": "better-npm-run babelify",
-        "build": "better-npm-run babelify && better-npm-run copy-sass",
+        "build": "better-npm-run babelify && better-npm-run copy-sass && better-npm-run bundle",
         "bundle": "better-npm-run bundle",
         "copy-sass": "better-npm-run copy-sass",
         "lint": "eslint src",
+        "prepublish": "npm run build",
         "start": "better-npm-run dev-server",
         "test": "echo \"No test specified\""
     },
-    "repository": {
-        "type": "git",
-        "url": "git+https://github.com/anasamo92/sagess-notifications.git"
-    },
     "betterScripts": {
+        "bundle": {
+            "command": "webpack --progress",
+            "env": {
+                "DEV": false,
+                "NODE_ENV": "production",
+                "BABEL_ENV": "production",
+                "LIBRARY_NAME": "sagess-notifications",
+                "MINIMIFY": false
+            }
+        },
         "copy-sass": {
             "command": "cd src && find . -name *.scss | xargs tar cvf - | tar xfp - -C ../"
         },
@@ -26,9 +33,25 @@
             },
             "command": "node script/babelify.js"
         },
+        "dev-server": {
+            "command": "node ./server.js",
+            "env": {
+                "DEV": true,
+                "SOURCE_MAP": false,
+                "ENTRY_FILE_PATH": "./src/example/index",
+                "PAGE_TITLE": "Focus notifications dev page",
+                "MINIMIFY": false,
+                "API_PORT": 9999,
+                "ANCHOR_CLASS": "notification-center-example"
+            }
+        },
         "test": {
             "command": "node ./node_modules/mocha/bin/mocha src/**/__tests__/**/*.js"
         }
+    },
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/anasamo92/sagess-notifications.git"
     },
     "babel": {
         "presets": [
@@ -81,36 +104,52 @@
         "redux-thunk": ">= 2.1.0"
     },
     "devDependencies": {
-        "babel-preset-sagess": "^1.0.4",
+        "autoprefixer-loader": "^3.2.0",
+        "babel-preset-sagess": "^1.0.6",
         "better-npm-run": "0.0.5",
         "babel-cli": "^6.4.0",
         "babel-core": "^6.1.2",
         "babel-eslint": "^4.1.4",
+        "babel-loader": "^6.1.0",
         "babel-runtime": "^6.0.14",
+        "body-parser": "^1.14.1",
         "chai": "^3.3.0",
         "chai-subset": "^1.1.0",
+        "css-loader": "^0.16.0",
         "eslint": "1.5.1",
-        "eslint-config-sagess": "^1.0.3",
+        "eslint-config-sagess": "^1.0.6",
         "eslint-plugin-filenames": "0.1.1",
         "eslint-plugin-react": "3.5.0",
         "express": "^4.13.3",
+        "extract-text-webpack-plugin": "^0.8.2",
         "faker": "^3.0.1",
+        "file-loader": "^0.8.4",
         "i18next": "^4.1.0",
         "jsdom": "^6.5.1",
+        "json-loader": "^0.5.2",
         "lodash": "^4.15.0",
         "material-design-icons-iconfont": "^3.0.3",
         "material-design-lite": "1.3.0",
         "mocha": "^2.3.0",
         "moment": "^2.14.1",
         "nock": "^2.17.0",
+        "node-sass": "^3.3.3",
         "react": "^15.4.2",
         "react-dom": "^15.4.2",
         "react-redux": "^5.0.1",
         "react-addons-test-utils": "^15.4.2",
+        "react-hot-loader": "^1.3.1",
         "redux": "^3.6.0",
         "redux-thunk": "^2.1.0",
         "redux-logger": "^2.7.4",
+        "sass-loader": "^3.1.2",
         "sinon": "^1.17.1",
-        "sinon-chai": "^2.8.0"
+        "sinon-chai": "^2.8.0",
+        "source-map-loader": "0.2.1",
+        "style-loader": "^0.13.0",
+        "url-loader": "^0.5.6",
+        "webpack": "1.15.0",
+        "webpack-dev-server": "^1.8.2",
+        "webpack-focus": "^0.11.5"
     }
 }
